# pywaterml

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  aux.js  operations.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  waterML.py
.github/workflows/: publish-pypi.yml  release.yml
conda.recipe/: conda_upload.sh  deploy_anaconda.sh  meta.yaml  run_test.py
docs/: analitica.rst  auxiliaryMod.rst  conf.py  hydroinformatics.rst  index.rst  main.rst  waterML.rst
pywaterml/: __init__.py  __main__.py  _version.py  analyzeData.py  aux.py  auxiliaryMod.py  cli.py  waterML.py
tests/: test.py  test_analyzeData.py  test_catalog.py  test_cli.py  test_commonFunctions.py  test_fast.py  test_pywaterml.py
