[metadata]
name = pywaterml
version = 0.0.2.dev1
author = Elkin Giovanni Romero Bustamante
author-email = gio.rombus@gmail.com
home-page = https://github.com/romer8/pywaterml
description = The pywaterml is a package that lets you handle WaterML functions such as GetValues, GetSitesInfo, etc. In addition it lets offers extra functions such as mean interpolation for data with gaps
long-description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause
platform = any
keywords = BYU, Hydrology, CUAHSI, Hydroshare
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Scientific/Engineering :: Visualization
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
project_urls =
    Bug Tracker = https://github.com/romer8/pywaterml/issues

[options]
zip_safe = False
include_package_data = True
python_requires = >= 2.7, != 3.8.*, <= 3.7.*
packages = pywaterml
test_suite = tests
setup_requires =
    setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    xmltodict
    pandas
    numpy
    owslib
    suds-py3
tests_require =
    xmltodict
    pandas
    numpy
    owslib
    suds-py3
