[metadata]
name = pywaterml
#version = 1.1.1
[versioneer]
VCS = git
versionfile_source = pywaterml/_version.py
versionfile_build = pywaterml/_version.py
tag_prefix =
parentdir_prefix = pywaterml-

author = Elkin Giovanni Romero Bustamante
author-email = gio.rombus@gmail.com
home-page = https://github.com/BYU-Hydroinformatics/pywaterml
description = The pywaterml is a package that lets you handle WaterML functions such as GetValues, GetSitesInfo, etc. In addition it lets offers extra functions such as mean interpolation for data with gaps
long-description = The pywaterml is a package that lets you handle WaterML functions such as GetValues, GetSitesInfo, etc. In addition it lets offers extra functions such as mean interpolation for data with gaps
license = BSD 3-Clause
platform = any
keywords = BYU, Hydrology, CUAHSI, Hydroshare
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Scientific/Engineering :: Visualization
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
project_urls =
    Bug Tracker = https://github.com/BYU-Hydroinformatics/pywaterml/issues

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
packages = pywaterml
test_suite = tests
setup_requires =
    setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    xmltodict
    pandas
    numpy
    owslib
    suds-community
    tslearn
    numba
tests_require =
    xmltodict
    pandas
    numpy
    owslib
    suds-community
    tslearn
    numba
